--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -1,29 +1,31 @@
-/* .poster {
-  width: 30%;
-  display: contents;
-  border: 1px solid yellowgreen
-} */
-
 .postercard {
-  border: 1px solid yellowgreen;
+  background-color: #404753;
+  border: 2px solid yellowgreen;
+  border-radius: 10px;
+  font-size: 26px;
   margin: 10px;
   padding: 10px 20px 20px 20px;
   word-wrap: break-word;
-  max-height: 150px;
-  min-height: 150px;
-  width: 30%;
+  display: inline-block;
+  max-height: 20%;
+  min-height: 20%;
+  width: 25%;
 }
 
 .postertext {
   font-weight: 300;
-  line-height: 1em;
   margin: 0px;
 }
 
 .postertitle {
   font-size: 0.8em;
-  line-height: 2em;
+  line-height: 1.2em;
   margin: 5px;
+  white-space: nowrap; 
+  overflow-x: auto;
+  /* text-overflow: ellipsis; */
+  word-wrap: break-word;
+  max-width: 100%;
 }
 
 .postersubtitle {
