--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -9,7 +9,14 @@
   display: inline-block;
   max-height: 20%;
   min-height: 20%;
-  width: 25%;
+  width: 80%;
+}
+
+.posterdescription {
+  text-align: justify;
+  font-size: 0.6em;
+  font-weight: 300;
+  margin: 10px;
 }
 
 .postertext {
@@ -18,8 +25,8 @@
 }
 
 .postertitle {
-  font-size: 0.8em;
-  line-height: 1.2em;
+  font-size: 1.0em;
+  font-weight: 350;
   margin: 5px;
   white-space: nowrap; 
   overflow-x: auto;
@@ -33,4 +40,10 @@
   font-weight: 300;
   line-height: 1em;
   margin: 0px;
+}
+
+.posterlink {
+  color: #fff;
+  text-decoration: none;
+  font-size: 0.8em;
 }
